--- a/00-referents.Rmd
+++ b/00-referents.Rmd
@@ -27,24 +27,5 @@ We have a list of 20 possible referents, and we count how many of these 20 refer
 19. driver2 (white car)
 20. drivers (driver1 + driver2) - *conjoined referent*
 
-
-### man
-### woman1
-### couple
-### people
-### family
-### ball
-### stroller
-### baby
-### woman2
-### dog
-### leash
-### groceries
-### trunk
-### car1
-### car2
-### car3
-### cars
-### driver1
-### driver2
-### drivers
+See also:
+* [Referent Questions](#questions/referents)
