--- a/referent_introduction_annotation_guidelines.tex
+++ b/referent_introduction_annotation_guidelines.tex
@@ -156,65 +156,8 @@ We have a list of 20 possible referents, and we count how many of these 20 refer
   drivers (driver1 + driver2) - \emph{conjoined referent}
 \end{enumerate}
 
-\hypertarget{man}{%
-\subsection{man}\label{man}}
-
-\hypertarget{woman1}{%
-\subsection{woman1}\label{woman1}}
-
-\hypertarget{couple}{%
-\subsection{couple}\label{couple}}
-
-\hypertarget{people}{%
-\subsection{people}\label{people}}
-
-\hypertarget{family}{%
-\subsection{family}\label{family}}
-
-\hypertarget{ball}{%
-\subsection{ball}\label{ball}}
-
-\hypertarget{stroller}{%
-\subsection{stroller}\label{stroller}}
-
-\hypertarget{baby}{%
-\subsection{baby}\label{baby}}
-
-\hypertarget{woman2}{%
-\subsection{woman2}\label{woman2}}
-
-\hypertarget{dog}{%
-\subsection{dog}\label{dog}}
-
-\hypertarget{leash}{%
-\subsection{leash}\label{leash}}
-
-\hypertarget{groceries}{%
-\subsection{groceries}\label{groceries}}
-
-\hypertarget{trunk}{%
-\subsection{trunk}\label{trunk}}
-
-\hypertarget{car1}{%
-\subsection{car1}\label{car1}}
-
-\hypertarget{car2}{%
-\subsection{car2}\label{car2}}
-
-\hypertarget{car3}{%
-\subsection{car3}\label{car3}}
-
-\hypertarget{cars}{%
-\subsection{cars}\label{cars}}
-
-\hypertarget{driver1}{%
-\subsection{driver1}\label{driver1}}
-
-\hypertarget{driver2}{%
-\subsection{driver2}\label{driver2}}
-
-\hypertarget{drivers}{%
-\subsection{drivers}\label{drivers}}
+See also:
+* \protect\hyperlink{questionsux2freferents}{Referent Questions}
 
 \hypertarget{answer-2-r-type}{%
 \chapter{Answer 2: R-Type}\label{answer-2-r-type}}
@@ -445,8 +388,8 @@ Questions:
 \hypertarget{referents-1}{%
 \section{Referents}\label{referents-1}}
 
-\hypertarget{groceries-1}{%
-\subsection{Groceries}\label{groceries-1}}
+\hypertarget{groceries}{%
+\subsection{Groceries}\label{groceries}}
 
 \begin{quote}
 What phrases should we tag as \texttt{groceries}? What phrases should we not?
@@ -948,7 +891,7 @@ Can a possessive pronoun give unused-unknown status to multiple coordinated refe
 Yes, if the possessive pronoun applies to a coordinated noun phrase, all referents in that noun phrase are unused-unknown.
 
 \begin{quote}
-There was a woman with {[}her dog{]} \texttt{u} and \protect\hyperlink{groceries-1}{groceries} \texttt{u}.
+There was a woman with {[}her dog{]} \texttt{u} and \protect\hyperlink{groceries}{groceries} \texttt{u}.
 \end{quote}
 
 \hypertarget{counting-cus}{%
